# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.16.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Minor compatibility tweaks for gcc-4.4 and glibc-2.10

*eix-0.16.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Add NLS support and experimental translation into German.
	- Add versionsort helper tool (and ./configure --enable-separate-tool)
	- Support $PROFILE/package.keywords and $PROFILE/package.unmask
	- Workaround setenv for http://bugs.gentoo.org/show_bug.cgi?id=267807
	- Use non-capital variable names in scripts.
	- Minor bugfixes in scripts.
	- Some autotools/preprocessor cleanup.
	- manpage: Make clear that overlays must be paths, not repo-names.
	- manpage: Give some examples for egencache hooks with eix-sync.

*eix-0.15.7
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Allow USE dependencies http://bugs.gentoo.org/show_bug.cgi?id=264798
	- Update citation reference for "portage with sqlite"
	- Introduce EXPORT_PORTDIR_OVERLAY to export a new PORTDIR_OVERLAY with
	  added/excluded overlays to deal with eclasses. This somewhat fixes
	  http://bugs.gentoo.org/show_bug.cgi?id=249843
	  and http://bugs.gentoo.org/show_bug.cgi?id=265854

*eix-0.15.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce EAPI_REGEX for EAPI-suffixed ebuilds (GLEP 55).
	- Introduce ...installedmarked... and ...availablemarked... to print
	  only those installed/available versions marked by --pipe.
	- Fix reference to obsolete cache type in eix-sync help page.
	- Make scripts more POSIX (e.g. "local" only at a function start).

*eix-0.15.5
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce special overlay name ~ for cache methods eix/eix* to allow
	  easily reading of previous overlay data.
	- Fix regression which did not work for overlay labels/numbers for
	  cache method eix/eix*.
	- Be a bit more restrictive for the -H default since there are
	  packages containing "http" in their name.