@@ -32,7 +32,7 @@ CacheTable::addCache(const char *eprefixcache, const char *eprefixport, const ch
 			}
 		}
 	}
-	BasicCache *cache = get_cache(cache_method);
+	BasicCache *cache = get_cache(cache_method, m_appending);
 	if(!cache) {
 		throw ExBasic(_("Unknown cache %r for directory %r"))
 			% cache_method % directory;
